# app/Models/BookItem.php
@@ -48,6 +48,7 @@ use Illuminate\Database\Eloquent\Relations\HasOne;
  * @property-read mixed $expected_available_date
  * @property-read Publisher|null $publisher
  * @property-read BookLanguage|null $language
+ * @property-read string $bookRequest
  * @property-read int $book_item_status
  * @property-read int|null $issued_books_count
  */
@@ -185,11 +186,16 @@ class BookItem extends Model
     public function apiM1Obj()
     {
         $bookItem = [
-            "id"            => $this->id,
-            "name"          => $this->book->name,
-            "status"        => $this->status,
-            "language_name" => $this->language->language_name,
-            "authors"       => implode(',', $this->book->authors->pluck('full_name')->toArray()),
+            "id"                      => $this->id,
+            "name"                    => $this->book->name,
+            "status"                  => $this->status,
+            "language_name"           => $this->language->language_name,
+            "authors"                 => implode(',', $this->book->authors->pluck('full_name')->toArray()),
+            "isbn_no"                 => $this->book->isbn,
+            "edition"                 => $this->edition,
+            "book_code"               => $this->book_code,
+            "expected_available_date" => $this->expected_available_date,
+            "is_reserved"             => ($this->lastIssuedBook) ? $this->lastIssuedBook->status == IssuedBook::STATUS_RESERVED ? true : false : false,
         ];
 
         return $bookItem;
